# Maestro

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  PRIVACY.md  README.md  SECURITY.md  gesture_controller.spec  index.html  maestro_debug_and_improvement_plan.md  maestro_git_log.md  maestro_plan.md  main.py  master_development_plan.md  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  research.md  ruff.toml  sitemap.xml  sys_prompt_1.txt  sys_prompt_2.txt  vision.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  commitlint.yml  docs.yml  fuzz.yml  release-please.yml  release.yml
accessibility/: index.html
adr/: index.html
adr/adr-001-multiprocessing-architecture/: index.html
adr/adr-002-gui-framework-pyqt6/: index.html
adr/adr-003-fsm-based-gesture-recognition/: index.html
adr/adr-004-ast-based-condition-parsing/: index.html
adr/adr-005-native-sendinput-over-pyautogui/: index.html
adr/adr-006-eventbus-design/: index.html
adr/adr-007-uinput-linux-input/: index.html
adr/adr-008-dtw-custom-gestures/: index.html
adr/adr-009-privacy-by-design/: index.html
adr/adr-010-plugin-hot-reload/: index.html
adr/adr-011-onnx-runtime-over-mediapipe/: index.html
adr/adr-012-hand-id-tracking/: index.html
adr/adr-013-privilege-separated-broker/: index.html
adr/adr-014-double-buffered-shm/: index.html
adr/adr-015-async-event-dispatch/: index.html
adr/adr-016-pluggy-plugin-system/: index.html
adr/adr-017-nuitka-standalone-builds/: index.html
adr/adr-018-uv-package-manager/: index.html
adr/adr-019-ruff-over-black-flake8/: index.html
adr/adr-020-wcag-2-2-accessibility/: index.html
adr/adr-021-gpu-compute-abstraction/: index.html
adr/adr-022-plugin-marketplace-governance/: index.html
adr/adr-023-telemetry-opt-in/: index.html
adr/adr-024-i18n-gettext/: index.html
adr/adr-025-model-versioning/: index.html
adr/adr-026-release-cadence/: index.html
adr/adr-027-security-disclosure/: index.html
adr/adr-028-accessibility-audit-process/: index.html
adr/adr-029-observability-pillars/: index.html
adr/adr-030-on-device-ai/: index.html
agent_prompts/: architecture_spec.md  phase_1_foundations.md  phase_2_engine.md  phase_3_platform.md  phase_4_plugins.md  phase_5_polish.md  test_strategy.md
api-reference/: index.html
architecture/: index.html
configuration/: index.html
developer-guide/: index.html
diagrams/data-flow/: index.html
diagrams/pipeline/: index.html
diagrams/plugin-architecture/: index.html
diagrams/release-pipeline/: index.html
diagrams/security-boundaries/: index.html
diagrams/threading/: index.html
docs/: accessibility.md  api-reference.md  architecture.md  configuration.md  developer-guide.md  faq.md  getting-started.md  index.md  plugin-development.md  testing.md  troubleshooting.md  user-guide.md
docs/adr/: README.md  adr-001-multiprocessing-architecture.md  adr-002-gui-framework-pyqt6.md  adr-003-fsm.md  adr-004-ast-based-condition-parsing.md  adr-005-native-sendinput-over-pyautogui.md  adr-006-eventbus-ipc.md  adr-007-uinput-linux-input.md  adr-008-dtw-custom.md  adr-009-privacy.md  adr-010-plugin-hot-reload.md  adr-011-onnx-runtime-over-mediapipe.md  adr-012-hand-id-tracking.md  adr-013-privilege-separated-broker.md  adr-014-double-buffered-shm.md  adr-015-async-event-dispatch.md  adr-016-pluggy-plugin-system.md  adr-017-nuitka-standalone-builds.md  adr-018-uv-package-manager.md  adr-019-ruff-over-black-flake8.md  adr-020-wcag-2-2-accessibility.md  adr-021-gpu-compute-abstraction.md  adr-022-plugin-marketplace-governance.md  adr-023-telemetry-opt-in.md  adr-024-i18n-gettext.md  adr-025-model-versioning.md  adr-026-release-cadence.md  adr-027-security-disclosure.md  adr-028-accessibility-audit-process.md  adr-029-observability-pillars.md  adr-030-on-device-ai.md
docs/diagrams/: data-flow.md  pipeline.md  plugin-architecture.md  release-pipeline.md  security-boundaries.md  threading.md
docs/migration/: v0.1-to-v0.2.md  v0.2-to-v0.3.md  v0.3-to-v1.0.md
docs/rfcs/: README.md  rfc-001-inference-backend-abstraction.md  rfc-002-shared-module-extraction.md  rfc-003-engine-decomposition.md  rfc-004-trigger-conditions-dsl.md  rfc-005-plugin-migration-pluggy.md  rfc-006-security-audit-hardening.md  rfc-007-performance-budget-enforcement.md  rfc-008-accessibility-implementation.md  rfc-009-gpu-compute-abstraction.md  rfc-010-plugin-marketplace-governance.md  rfc-011-telemetry-schema.md  rfc-012-i18n-pipeline.md  rfc-013-model-versioning.md  rfc-014-accessibility-audit-process.md  rfc-015-on-device-transformer.md
docs/specs/: ds-001-inference-backend.md  ds-002-event-driven-gui.md  ds-003-config-hot-reload.md  ds-004-plugin-sdk.md  ds-005-trigger-conditions-dsl.md  ds-006-telemetry-schema.md  (+2 more)
faq/: index.html
gesture_controller/: __init__.py  __main__.py  main.py
getting-started/: index.html
javascripts/: extra.js
old_docs/: MAESTRO_CI_FAILURE_ANALYSIS_REPORT.md.md  agent.md  error_log.md  implementation-guide.md  implementation-plan.md  implementation_guide.md  implementation_plan.md  maestro-ci-failure-analysis-report.md  maestro-debug-and-improvement-plan-v2-annotated.md  maestro-debug-and-improvement-plan-v2.md  maestro-git-log-annotated.md  maestro-git-log-merged.md  maestro-git-log.md  maestro_ci_fix_plan.md  maestro_debug_and_improvement_plan_v2.md  maestro_debug_and_improvement_plan_v2_annotated.md  maestro_git_log_annotated2.md  master-development-plan.md  master_development_plan.md  plan.md  sys-prompt-3.txt
packaging/: 99-gesture-controller-uinput.rules  sbom.cdx.json  windows_installer.nsi
plugin-development/: index.html
rfcs/: index.html
scripts/: compile_locales.py  download_models.py  generate_replay_fixtures.py  profile_latency.py  quantize_model.py  verify_install.py
search/: search_index.json
testing/: index.html
troubleshooting/: index.html
user-guide/: index.html
v2.0/: maestro_v2_roadmap.md
v3.0/: maestro_refactor_plan_v3.md
(+234 files in other folders)
