[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture-controller"
version = "0.1.0"
description = "Cross-platform hand-gesture desktop controller"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "PyQt6>=6.5.0",
    "PyYAML>=6.0",
    "jsonschema>=4.17.0",
    "structlog>=23.1.0",
    "numba>=0.57.0",
    "pyautogui>=0.9.54",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
gesture-controller = "gesture_controller.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gesture_controller*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mediapipe.*",
    "cv2.*",
    "numba.*",
    "jsonschema.*",
    "pyautogui.*",
    "Quartz.*",
    "AppKit.*",
    "evdev.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["gesture_controller/tests"]
markers = [
    "benchmark: performance benchmark tests",
    "slow: tests that take > 5 seconds",
    "e2e: end-to-end tests requiring hardware",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["gesture_controller"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
