[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture-controller"
version = "0.1.0"
description = "Cross-platform hand-gesture desktop controller"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
license-files = ["LICENSE"]
keywords = ["gesture", "mediapipe", "accessibility", "input", "hand-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Accessibility",
    "Topic :: Multimedia :: Video :: Capture",
    "Framework :: PyQt6",
]
dependencies = [
    "opencv-python>=4.8.0,<5.0",
    "mediapipe>=0.10.0,<0.11",
    "numpy>=1.24.0,<2.0",
    "PyQt6>=6.5.0,<6.12",
    "PyYAML>=6.0,<7.0",
    "jsonschema>=4.17.0,<5.0",
    "structlog>=23.1.0,<25.0",
    "numba>=0.57.0,<0.60",
    "pyautogui>=0.9.54,<0.10",
    "psutil>=5.9.0,<7.0",
    "watchdog>=3.0.0,<5.0",
    # Platform-specific — declared with markers so non-target platforms skip them
    "evdev>=1.6.0; sys_platform == 'linux'",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/aryansinghnagar/Maestro"
Repository = "https://github.com/aryansinghnagar/Maestro"
Issues = "https://github.com/aryansinghnagar/Maestro/issues"
Changelog = "https://github.com/aryansinghnagar/Maestro/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0",
    "pytest-cov>=4.1.0,<6.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
gesture-controller = "gesture_controller.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gesture_controller*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mediapipe.*",
    "cv2.*",
    "numba.*",
    "jsonschema.*",
    "pyautogui.*",
    "Quartz.*",
    "AppKit.*",
    "evdev.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["gesture_controller/tests"]
markers = [
    "benchmark: performance benchmark tests",
    "slow: tests that take > 5 seconds",
    "e2e: end-to-end tests requiring hardware",
    "real_mediapipe: integration tests using real mediapipe assets",
]
addopts = "-v --tb=short --strict-markers --strict-config --cov=gesture_controller"

[tool.coverage.run]
source = ["gesture_controller"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
