[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture-controller"
version = "1.0.0"
description = "Cross-platform hand-gesture desktop controller"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["gesture", "mediapipe", "accessibility", "input", "hand-tracking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Accessibility",
    "Topic :: Multimedia :: Video :: Capture",
    "Framework :: PyQt6",
]
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "PyQt6>=6.5.0",
    "PyYAML>=6.0",
    "ruamel.yaml>=0.17.0",
    "jsonschema>=4.17.0",
    "structlog>=23.1.0",
    "numba>=0.57.0",
    "onnxruntime>=1.16.0",
    "tuf>=2.0.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "RestrictedPython>=6.0",
    "wasmtime>=12.0.0",
    # Platform-specific — declared with markers so non-target platforms skip them
    "evdev>=1.6.0; sys_platform == 'linux'",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/aryansinghnagar/Maestro"
Repository = "https://github.com/aryansinghnagar/Maestro"
Issues = "https://github.com/aryansinghnagar/Maestro/issues"
Changelog = "https://github.com/aryansinghnagar/Maestro/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=4.1.0,<8.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.12",
]
voice = [
    "vosk>=0.3.45",
    "pyaudio>=0.2.13; sys_platform == 'win32'",
]

[project.scripts]
maestro = "gesture_controller.cli.cli:main"
gesture-controller = "gesture_controller.__main__:main"
gesture-controller-verify = "gesture_controller.cli.verify_install:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gesture_controller*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
exclude = "gesture_controller/tests/"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_reexport = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "mediapipe.*",
    "cv2.*",
    "numba.*",
    "jsonschema.*",
    "Quartz.*",
    "AppKit.*",
    "evdev.*",
    "psutil.*",
    "watchdog.*",
    "AVFoundation.*",
    "ApplicationServices.*",
    "onnxruntime.*",
    "vosk.*",
    "pyaudio.*",
    "tuf.*",
    "securesystemslib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "gesture_controller.gui.*",
    "gesture_controller.os_integration.*",
    "gesture_controller.plugins.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "gesture_controller.os_integration.windows_controller"
warn_unused_ignores = false


[tool.pytest.ini_options]
testpaths = ["gesture_controller/tests"]
markers = [
    "benchmark: performance benchmark tests",
    "slow: tests that take > 5 seconds",
    "e2e: end-to-end tests requiring hardware",
    "real_mediapipe: integration tests using real mediapipe assets",
    "requires_hardware: integration tests requiring physical hardware",
]
addopts = "-v --tb=short --strict-markers --strict-config --cov=gesture_controller"

[tool.coverage.run]
source = ["gesture_controller"]
branch = true
omit = [
    "gesture_controller/tests/**",
    "gesture_controller/__main__.py",
    "gesture_controller/cli/verify_install.py",
    "gesture_controller/gui/**",
    "gesture_controller/plugins/**",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
